--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -78,9 +78,17 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Interaction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++AxisMappings=(AxisName="ForwardAxis",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="RightAxis",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="MouseX",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="MouseY",Scale=1.000000,Key=MouseY)
++AxisMappings=(AxisName="ForwardAxis",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="RightAxis",Scale=-1.000000,Key=A)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
++ConsoleKeys=ё
 
