--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,4 +51,5 @@ ManualIPAddress=
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/L_Statrup.L_Statrup
 GameDefaultMap=/Game/Levels/L_Statrup.L_Statrup
+GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_C
 
