--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,3 +53,8 @@ EditorStartupMap=/Game/Levels/L_Statrup.L_Statrup
 GameDefaultMap=/Game/Levels/L_Entry.L_Entry
 GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_C
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Campus.ServerListWidget.UpdateServerListButton",NewName="/Script/Campus.ServerListWidget.M_UpdateServerListButton")
++PropertyRedirects=(OldName="/Script/Campus.ServerListWidget.ServersVerticalBox",NewName="/Script/Campus.ServerListWidget.M_ServersVerticalBox")
++PropertyRedirects=(OldName="/Script/Campus.ServerListWidget.ServerItemWidgetClass",NewName="/Script/Campus.ServerListWidget.M_ServerItemWidgetClass")
