Add Server list visual

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -55,6 +55,6 @@ GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_
 
 
 [CoreRedirects]
-+PropertyRedirects=(OldName="/Script/Campus.ServerListWidget.UpdateServerListButton",NewName="/Script/Campus.ServerListWidget.M_UpdateServerListButton")
-+PropertyRedirects=(OldName="/Script/Campus.ServerListWidget.ServersVerticalBox",NewName="/Script/Campus.ServerListWidget.M_ServersVerticalBox")
-+PropertyRedirects=(OldName="/Script/Campus.ServerListWidget.ServerItemWidgetClass",NewName="/Script/Campus.ServerListWidget.M_ServerItemWidgetClass")
++PropertyRedirects=(OldName="/Script/Campus.ServerListWidget.M_UpdateServerListButton",NewName="/Script/Campus.ServerListWidget.UpdateServerListButton")
++PropertyRedirects=(OldName="/Script/Campus.ServerListWidget.M_ServersVerticalBox",NewName="/Script/Campus.ServerListWidget.ServersVerticalBox")
++PropertyRedirects=(OldName="/Script/Campus.ServerListWidget.M_ServerItemWidgetClass",NewName="/Script/Campus.ServerListWidget.ServerItemWidgetClass")
