--- a/Campus.uproject
+++ b/Campus.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Campus",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"AIModule"
+			]
 		}
 	],
 	"Plugins": [
