--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,3 +53,9 @@ EditorStartupMap=/Game/Levels/L_Statrup.L_Statrup
 GameDefaultMap=/Game/Levels/L_Statrup.L_Statrup
 GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_C
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+ActivationKey=F10
+CategorySlot5=Five
+CategorySlot4=Four
+CategorySlot3=Three
+
