Implementation simple logic for inventory

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,3 +59,9 @@ CategorySlot5=Five
 CategorySlot4=Four
 CategorySlot3=Three
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/Campus.InventoryIntemVisual",NewName="/Script/Campus.InventoryItemVisual")
++ClassRedirects=(OldName="/Script/Campus.MyClass",NewName="/Script/Campus.Inventory")
++ClassRedirects=(OldName="/Script/Campus.InventoryWidget",NewName="/Script/Campus.Inventory")
++ClassRedirects=(OldName="/Script/Campus.UInventoryItemWidget",NewName="/Script/Campus.InventoryItemWidget")
