--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,6 +79,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Interaction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="UnInteraction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
 +AxisMappings=(AxisName="ForwardAxis",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="RightAxis",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MouseX",Scale=1.000000,Key=MouseX)
