Revert "Revert "ChatSystem""
This reverts commit f6a20abe6eeb76b229e6aa5cdf0da34085c0e7f1.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,3 +59,9 @@ CategorySlot5=Five
 CategorySlot4=Four
 CategorySlot3=Three
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/Campus.OfflineMessageManager",NewName="/Script/Campus.ChatManager")
++ClassRedirects=(OldName="/Script/Campus.UChatUser",NewName="/Script/Campus.ChatUserComponent")
++ClassRedirects=(OldName="/Script/Campus.ChatUser",NewName="/Script/Campus.ChatUserComponent")
++ClassRedirects=(OldName="/Script/Campus.MessageManager",NewName="/Script/Campus.ChatManager")
