--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,6 +80,8 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Interaction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="UnInteraction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
++ActionMappings=(ActionName="OpenChat",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
++ActionMappings=(ActionName="OpenEscapeMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="ForwardAxis",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="RightAxis",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MouseX",Scale=1.000000,Key=MouseX)
