--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,3 +73,6 @@ CategorySlot3=Three
 +ClassRedirects=(OldName="/Script/Campus.ChatUser",NewName="/Script/Campus.ChatUserComponent")
 +ClassRedirects=(OldName="/Script/Campus.MessageManager",NewName="/Script/Campus.ChatManager")
 
+[/Script/AIModule.AISystem]
+bEnableDebuggerPlugin=True
+
