CUM-86 Creating the mechanics of drawing on a blackboard
creating drawing logic using Render Targer

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,3 +76,6 @@ CategorySlot3=Three
 [/Script/AIModule.AISystem]
 bEnableDebuggerPlugin=True
 
+[/Script/Engine.PhysicsSettings]
+bSupportUVFromHitResults=True
+
