--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,3 +80,6 @@ CategorySlot3=Three
 [/Script/AIModule.AISystem]
 bEnableDebuggerPlugin=True
 
+[/Script/NavigationSystem.RecastNavMesh]
+AgentRadius=10.000000
+
