Generate Chess Board and add HTTP request to lichess

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,6 +76,14 @@ CategorySlot3=Three
 +FunctionRedirects=(OldName="/Script/Campus.IInteractable.BPHoldInteract",NewName="/Script/Campus.IInteractable.HoldInteract")
 +FunctionRedirects=(OldName="/Script/Campus.IInteractable.BPEndInteract",NewName="/Script/Campus.IInteractable.EndInteract")
 +FunctionRedirects=(OldName="/Script/Campus.IInteractable.BP_DragInteract",NewName="/Script/Campus.IInteractable.DragInteract")
++ClassRedirects=(OldName="/Script/Campus.BasePieces",NewName="/Script/Campus.BasePiece")
++ClassRedirects=(OldName="/Script/Campus.ACKnight",NewName="/Script/Campus.CKnight")
++ClassRedirects=(OldName="/Script/Campus.AKnight",NewName="/Script/Campus.CKnight")
++ClassRedirects=(OldName="/Script/Campus.Knight",NewName="/Script/Campus.CKnight")
++ClassRedirects=(OldName="/Script/Campus.CKing",NewName="/Script/Campus.ChKing")
++ClassRedirects=(OldName="/Script/Campus.CBishop",NewName="/Script/Campus.ChBishop")
++ClassRedirects=(OldName="/Script/Campus.CPawn",NewName="/Script/Campus.ChPawn")
++ClassRedirects=(OldName="/Script/Campus.CQuin",NewName="/Script/Campus.ChQuin")
 
 [/Script/AIModule.AISystem]
 bEnableDebuggerPlugin=True
