Add Meshes and Textures for board & add moves from cell to cell and send to lichess

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -84,6 +84,7 @@ CategorySlot3=Three
 +ClassRedirects=(OldName="/Script/Campus.CBishop",NewName="/Script/Campus.ChBishop")
 +ClassRedirects=(OldName="/Script/Campus.CPawn",NewName="/Script/Campus.ChPawn")
 +ClassRedirects=(OldName="/Script/Campus.CQuin",NewName="/Script/Campus.ChQuin")
++FunctionRedirects=(OldName="/Script/Campus.BasePiece.OnClickeed",NewName="/Script/Campus.BasePiece.OnClicked")
 
 [/Script/AIModule.AISystem]
 bEnableDebuggerPlugin=True
