Add API Command Add Chess pieces models && Add Widgetinteraction component to  interacti with intereactive board
Co-Authored-By: Kamino22 <81518605+Kamino22@users.noreply.github.com>

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,7 +57,7 @@ ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/L_ProjectSchool.L_ProjectSchool
-GameDefaultMap=/Game/Levels/L_Statrup.L_Statrup
+GameDefaultMap=/Game/Levels/L_ProjectSchool.L_ProjectSchool
 GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_C
 
 [/Script/GameplayDebugger.GameplayDebuggerConfig]
