--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,6 +29,8 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=True
 r.Lumen.HardwareRayTracing=True
 r.PathTracing=True
+r.MinScreenRadiusForLights=0.030000
+r.Lumen.HardwareRayTracing.LightingMode=0
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
