--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -56,7 +56,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/L_ProjectSchool.L_ProjectSchool
+EditorStartupMap=/Game/Levels/L_ProjectSchool_AITest.L_ProjectSchool_AITest
 GameDefaultMap=/Game/Levels/L_Statrup.L_Statrup
 GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_C
 
