Chess move animation update

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -85,6 +85,7 @@ CategorySlot3=Three
 +ClassRedirects=(OldName="/Script/Campus.CPawn",NewName="/Script/Campus.ChPawn")
 +ClassRedirects=(OldName="/Script/Campus.CQuin",NewName="/Script/Campus.ChQuin")
 +FunctionRedirects=(OldName="/Script/Campus.BasePiece.OnClickeed",NewName="/Script/Campus.BasePiece.OnClicked")
++ClassRedirects=(OldName="/Script/Campus.ChessAuxiliaryLibrary",NewName="/Script/Campus.ChessAuxiliaryLib")
 
 [/Script/AIModule.AISystem]
 bEnableDebuggerPlugin=True
