--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -86,6 +86,7 @@ CategorySlot3=Three
 +ClassRedirects=(OldName="/Script/Campus.CQuin",NewName="/Script/Campus.ChQuin")
 +FunctionRedirects=(OldName="/Script/Campus.BasePiece.OnClickeed",NewName="/Script/Campus.BasePiece.OnClicked")
 +ClassRedirects=(OldName="/Script/Campus.ChessAuxiliaryLibrary",NewName="/Script/Campus.ChessAuxiliaryLib")
++PropertyRedirects=(OldName="/Script/Campus.BaseCharacter.MouseSens",NewName="/Script/Campus.BaseCharacter.MouseSensivity")
 
 [/Script/AIModule.AISystem]
 bEnableDebuggerPlugin=True
