Inventory Simple implementation( switch inventory objects && pickup)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,6 +91,9 @@ CategorySlot3=Three
 +PropertyRedirects=(OldName="/Script/Campus.EntryGameMode.EntryWidgetClass",NewName="/Script/Campus.EntryGameMode.M_EntryWidgetClass")
 +PropertyRedirects=(OldName="/Script/Campus.BaseController.ChatUserComponent",NewName="/Script/Campus.BaseController.M_ChatUserComponent")
 +PropertyRedirects=(OldName="/Script/Campus.BaseController.BaseHudClass",NewName="/Script/Campus.BaseController.M_BaseHudClass")
++ClassRedirects=(OldName="/Script/Campus.AInventoryActor",NewName="/Script/Campus.InventoryActor")
++FunctionRedirects=(OldName="/Script/Campus.BaseCharacter.OnInventoryActorChanged",NewName="/Script/Campus.BaseCharacter.OnSelectedInventoryActorChanged")
++PropertyRedirects=(OldName="/Script/Campus.BaseCharacter.InventorySlotComponent",NewName="/Script/Campus.BaseCharacter.InventoryActorSlotComponent")
 
 [/Script/AIModule.AISystem]
 bEnableDebuggerPlugin=True
