--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,6 +83,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="OpenChat",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +ActionMappings=(ActionName="OpenEscapeMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="ChessBoardinteraction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="SelectPrevItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
++ActionMappings=(ActionName="SelectNextItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +AxisMappings=(AxisName="ForwardAxis",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="RightAxis",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MouseX",Scale=1.000000,Key=MouseX)
