Inventory Widget create
Add view

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -56,7 +56,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/L_ProjectSchool.L_ProjectSchool
+EditorStartupMap=/Game/Levels/TESTS/L_InteractionSystem_TEST.L_InteractionSystem_TEST
 GameDefaultMap=/Game/Levels/L_ProjectSchool.L_ProjectSchool
 GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_C
 
@@ -94,6 +94,7 @@ CategorySlot3=Three
 +ClassRedirects=(OldName="/Script/Campus.AInventoryActor",NewName="/Script/Campus.InventoryActor")
 +FunctionRedirects=(OldName="/Script/Campus.BaseCharacter.OnInventoryActorChanged",NewName="/Script/Campus.BaseCharacter.OnSelectedInventoryActorChanged")
 +PropertyRedirects=(OldName="/Script/Campus.BaseCharacter.InventorySlotComponent",NewName="/Script/Campus.BaseCharacter.InventoryActorSlotComponent")
++ClassRedirects=(OldName="/Script/Campus.MyClass",NewName="/Script/Campus.InventoryItemWidget")
 
 [/Script/AIModule.AISystem]
 bEnableDebuggerPlugin=True
