--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,7 +57,7 @@ ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/TESTS/L_InteractionSystem_TEST.L_InteractionSystem_TEST
-GameDefaultMap=/Game/Levels/L_ProjectSchool.L_ProjectSchool
+GameDefaultMap=/Game/Levels/L_ProjectSchool_Gameplay.L_ProjectSchool_Gameplay
 GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_C
 
 [/Script/GameplayDebugger.GameplayDebuggerConfig]
