--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -89,5 +89,5 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="L_ProjectSchool")
++MapsToCook=(FilePath="L_ProjectSchool_Gameplay")
 
