--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,7 +21,7 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
@@ -31,6 +31,8 @@ r.Lumen.HardwareRayTracing=True
 r.PathTracing=True
 r.MinScreenRadiusForLights=0.030000
 r.Lumen.HardwareRayTracing.LightingMode=0
+r.ReflectionCaptureResolution=128
+r.Lumen.TraceMeshSDFs=1
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
