--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -61,3 +61,6 @@ EditorStartupMap=/Game/Levels/L_Statrup.L_Statrup
 GameDefaultMap=/Game/Levels/L_Entry.L_Entry
 GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_C
 
+[/Script/Engine.PhysicsSettings]
+bSupportUVFromHitResults=True
+
