--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,8 +57,8 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/L_Statrup.L_Statrup
-GameDefaultMap=/Game/Levels/L_Entry.L_Entry
+EditorStartupMap=/Game/Levels/L_ProjectSchool_Gameplay.L_ProjectSchool_Gameplay
+GameDefaultMap=/Game/Levels/TESTS/UserInterfaceTest.UserInterfaceTest
 GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_C
 
 [/Script/Engine.PhysicsSettings]
