--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -90,4 +90,6 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="L_ProjectSchool_Gameplay")
++MapsToCook=(FilePath="UserInterfaceTest")
++MapsToCook=(FilePath="L_Stan")
 
