--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,7 +57,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/L_ProjectSchool_Gameplay.L_ProjectSchool_Gameplay
+EditorStartupMap=/Game/Levels/MiniGamesTest/L_AlpinistGame_TEST.L_AlpinistGame_TEST
 GameDefaultMap=/Game/Levels/TESTS/UserInterfaceTest.UserInterfaceTest
 GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_C
 
