--- a/Campus.uproject
+++ b/Campus.uproject
@@ -35,6 +35,15 @@
 		{
 			"Name": "PreLoadScreenMoviePlayer",
 			"Enabled": true
+		},
+		{
+			"Name": "OpenXR",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Linux",
+				"Android"
+			]
 		}
 	]
 }
