--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -64,3 +64,6 @@ GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_
 [/Script/Engine.PhysicsSettings]
 bSupportUVFromHitResults=True
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Campus.TaskWidget.TaskState",NewName="/Script/Campus.TaskWidget.TaskStateBox")
