--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -93,3 +93,6 @@ bSkipMovies=False
 +MapsToCook=(FilePath="UserInterfaceTest")
 +MapsToCook=(FilePath="L_Stan")
 
+[/Script/OpenXRHMD.OpenXRHMDSettings]
+bIsFBFoveationEnabled=True
+
