--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -34,6 +34,7 @@ r.Lumen.HardwareRayTracing.LightingMode=0
 r.ReflectionCaptureResolution=128
 r.Lumen.TraceMeshSDFs=1
 r.Mobile.UseHWsRGBEncoding=True
+r.AllowOcclusionQueries=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -71,4 +72,8 @@ bSupportUVFromHitResults=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bShowLaunchImage=False
+
+[/Script/OnlineSubsystemPico.OnlinePicoSettings]
+bIsForeign=False
+bIsGlobal=False
 
