--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -58,6 +58,36 @@
 +AxisConfig=(AxisKeyName="ValveIndex_Right_Trackpad_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 +AxisConfig=(AxisKeyName="ValveIndex_Right_Trackpad_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 +AxisConfig=(AxisKeyName="ValveIndex_Right_Trackpad_Force",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICONeo3_Left_Grip_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICONeo3_Left_Trigger_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICONeo3_Left_Thumbstick_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICONeo3_Left_Thumbstick_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICONeo3_Right_Grip_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICONeo3_Right_Trigger_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICONeo3_Right_Thumbstick_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICONeo3_Right_Thumbstick_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4_Left_Grip_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4_Left_Trigger_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4_Left_Thumbstick_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4_Left_Thumbstick_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4_Right_Grip_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4_Right_Trigger_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4_Right_Thumbstick_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4_Right_Thumbstick_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICOG3_Left_Trigger_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICOG3_Left_Thumbstick_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICOG3_Left_Thumbstick_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICOG3_Right_Trigger_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICOG3_Right_Thumbstick_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICOG3_Right_Thumbstick_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4U_Left_Grip_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4U_Left_Trigger_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4U_Left_Thumbstick_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4U_Left_Thumbstick_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4U_Right_Grip_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4U_Right_Trigger_Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4U_Right_Thumbstick_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
++AxisConfig=(AxisKeyName="PICO4U_Right_Thumbstick_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 bAltEnterTogglesFullscreen=True
 bF11TogglesFullscreen=True
 bUseMouseForTouch=False
@@ -78,20 +108,50 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="ButtonA",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_A_Click)
++ActionMappings=(ActionName="ButtonATouched",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_A_Touch)
++ActionMappings=(ActionName="ButtonB",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_B_Click)
++ActionMappings=(ActionName="ButtonBTouched",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_B_Touch)
++ActionMappings=(ActionName="ButtonLeftGrip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Left_Grip_Click)
++ActionMappings=(ActionName="ButtonLeftHome",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Left_Home_Click)
++ActionMappings=(ActionName="ButtonLeftMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Left_Menu_Click)
++ActionMappings=(ActionName="ButtonLeftTrigger",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Left_Trigger_Click)
++ActionMappings=(ActionName="ButtonLeftTriggerTouched",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Left_Trigger_Touch)
++ActionMappings=(ActionName="ButtonRightGrip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_Grip_Click)
++ActionMappings=(ActionName="ButtonRightHome",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_Home_Click)
++ActionMappings=(ActionName="ButtonRightJoyStickDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_Thumbstick_Down)
++ActionMappings=(ActionName="ButtonRightJoyStickUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_Thumbstick_Up)
++ActionMappings=(ActionName="ButtonRightSystem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_System_Click)
++ActionMappings=(ActionName="ButtonRightTrigger",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_Trigger_Click)
++ActionMappings=(ActionName="ButtonRightTriggerTouched",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_Trigger_Touch)
++ActionMappings=(ActionName="ButtonX",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Left_X_Click)
++ActionMappings=(ActionName="ButtonXTouched",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Left_X_Touch)
++ActionMappings=(ActionName="ButtonY",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Left_Y_Click)
++ActionMappings=(ActionName="ButtonYTouched",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Left_Y_Touch)
++ActionMappings=(ActionName="ChessBoardinteraction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Drop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
 +ActionMappings=(ActionName="Interaction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="UnInteraction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
++ActionMappings=(ActionName="LeftJoyStickTouched",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Left_Thumbstick_Touch)
 +ActionMappings=(ActionName="OpenChat",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +ActionMappings=(ActionName="OpenEscapeMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
-+ActionMappings=(ActionName="ChessBoardinteraction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="SelectPrevItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
++ActionMappings=(ActionName="RightJoyStickTouched",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PICOTouch_Right_Thumbstick_Touch)
 +ActionMappings=(ActionName="SelectNextItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
-+ActionMappings=(ActionName="Drop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
++ActionMappings=(ActionName="SelectPrevItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
++ActionMappings=(ActionName="UnInteraction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
++AxisMappings=(AxisName="ForwardAxis",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="ForwardAxis",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="RightAxis",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="LeftGripAxis",Scale=1.000000,Key=PICOTouch_Left_Grip_Axis)
++AxisMappings=(AxisName="LeftJoyStickXAxis",Scale=1.000000,Key=PICOTouch_Left_Thumbstick_X)
++AxisMappings=(AxisName="LeftJoyStickYAxis",Scale=1.000000,Key=PICOTouch_Left_Thumbstick_Y)
++AxisMappings=(AxisName="LeftTriggerAxis",Scale=1.000000,Key=PICOTouch_Left_Trigger_Axis)
 +AxisMappings=(AxisName="MouseX",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="MouseY",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="ForwardAxis",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="RightAxis",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="RightAxis",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="RightGripAxis",Scale=1.000000,Key=PICOTouch_Right_Grip_Axis)
++AxisMappings=(AxisName="RightJoyStickXAxis",Scale=1.000000,Key=PICOTouch_Right_Thumbstick_X)
++AxisMappings=(AxisName="RightJoyStickYAxis",Scale=1.000000,Key=PICOTouch_Right_Thumbstick_Y)
++AxisMappings=(AxisName="RightTriggerAxis",Scale=1.000000,Key=PICOTouch_Right_Trigger_Axis)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
