--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,12 +27,14 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.SkinCache.CompileShaders=True
 r.RayTracing=True
-r.Lumen.HardwareRayTracing=True
-r.PathTracing=True
+r.Lumen.HardwareRayTracing=False
+r.PathTracing=False
 r.MinScreenRadiusForLights=0.030000
 r.Lumen.HardwareRayTracing.LightingMode=0
-r.ReflectionCaptureResolution=128
+r.ReflectionCaptureResolution=1024
 r.Lumen.TraceMeshSDFs=1
+r.RayTracing.Shadows=False
+r.ForwardShading=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
