Simplyfied dynamic light on project school

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -37,7 +37,9 @@ r.Mobile.UseHWsRGBEncoding=False
 r.AllowOcclusionQueries=False
 r.DefaultFeature.AutoExposure=False
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
-r.NormalMapsForStaticLighting=False
+r.NormalMapsForStaticLighting=True
+r.Mobile.Forward.EnableClusteredReflections=False
+r.AllowStaticLighting=True
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
