--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -40,6 +40,8 @@ r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
 r.NormalMapsForStaticLighting=True
 r.Mobile.Forward.EnableClusteredReflections=False
 r.AllowStaticLighting=True
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -64,8 +66,8 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/L_ProjectSchool_Gameplay.L_ProjectSchool_Gameplay
-GameDefaultMap=/Game/Levels/TESTS/UserInterfaceTest.UserInterfaceTest
+EditorStartupMap=/Game/Levels/L_Room-251_StaticLight.L_Room-251_StaticLight
+GameDefaultMap=/Game/Levels/L_Room-251_StaticLight.L_Room-251_StaticLight
 GameInstanceClass=/Game/BLueprints/Core/BP_UserGameInstance.BP_UserGameInstance_C
 
 [/Script/Engine.PhysicsSettings]
