--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C428047043A8DAB1BE7A3488383A3722
+bStartInVR=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
@@ -89,10 +90,7 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="L_ProjectSchool_Gameplay")
-+MapsToCook=(FilePath="UserInterfaceTest")
-+MapsToCook=(FilePath="L_Stan")
-+MapsToCook=(FilePath="L_Room-251")
++MapsToCook=(FilePath="L_Room-251_StaticLight")
 
 [/Script/OpenXRHMD.OpenXRHMDSettings]
 bIsFBFoveationEnabled=True
